# API-SpecGenerator

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  openapi.json  pyproject.toml
src/openapi_generator/: ai_client.py  cli.py  file_collector.py  generator.py
tests/: test_generator.py
